gcc-7 (7.4.0-8) UNRELEASED; urgency=medium

  * Fix PR tree-optimization/89505, taken from the gcc-8 branch.

 -- Matthias Klose <doko@debian.org>  Wed, 13 Mar 2019 21:38:19 +0100

gcc-7 (7.4.0-7) unstable; urgency=medium

  * Update to SVN 20190308 (r269489) from the gcc-7-branch.
    - Fix PR target/89397 (x86), PR ada/81956, PR fortran/72714,
      PR fortran/77583, PR fortran/87689.
  * Fix PR c++/89585, taken from the gcc-8 branch.

 -- Matthias Klose <doko@debian.org>  Sat, 09 Mar 2019 08:52:02 +0100

gcc-7 (7.4.0-6) unstable; urgency=medium

  * Update to SVN 20190225 (r269187) from the gcc-7-branch.
    - Fix PR libstdc++/89446, PR rtl-optimization/89242, PR ipa/89009,
      PR target/88648 (ARM), PR fortran/88117, PR fortran/71066,
      PR fortran/89077, PR fortran/71723.

 -- Matthias Klose <doko@debian.org>  Mon, 25 Feb 2019 13:37:30 +0100

gcc-7 (7.4.0-5) unstable; urgency=medium

  * Update to SVN 20190209 (r268732) from the gcc-7-branch.
    - Fix PR target/88856 (S390X). Addresses: #915738. LP: #1815057.
    - Fix PR target/85755 (PPC), PR target/87064 (PPC), PR target/87064 (PPC),
      PR fortran/67679, PR fortran/88393, PR libfortran/88678,
      PR target/88343 (PPC).

 -- Matthias Klose <doko@debian.org>  Sat, 09 Feb 2019 23:11:56 +0100

gcc-7 (7.4.0-4) unstable; urgency=medium

  * Update to SVN 20190203 (r268483) from the gcc-7-branch.
    - Fix PR rtl-optimization/89115 (compile time part). Addresses: #918329.
    - Fix PR tree-optimization/89008, PR fortran/88298, PR fortran/57048.
  * Turn on profiled bootstrap on x86_64, ARM32, AArch64, PPC64 and s390x
    architectures for native builds.

 -- Matthias Klose <doko@debian.org>  Sun, 03 Feb 2019 10:54:14 +0100

gcc-7 (7.4.0-3) unstable; urgency=medium

  * Update to SVN 20190130 (r268403) from the gcc-7-branch.
    - Fix PR libstdc++/64883, PR libstdc++/70694, PR c/88720, PR c/88726,
      PR inline-asm/55681, PR target/88948, PR target/88998 (x86),