@@ -1,6 +1,7 @@
 gcc-7 (7.4.0-8) UNRELEASED; urgency=medium
 
   * Fix PR tree-optimization/89505, taken from the gcc-8 branch.
+  * Fix package descriptions for cross packages.
 
  -- Matthias Klose <doko@debian.org>  Wed, 13 Mar 2019 21:38:19 +0100
 
